# Virtualswitch

./: README.md  README.me  docker-compose.yml
grpc/: gradient.grpc.pb.cc  gradient.grpc.pb.h  gradient.pb.cc  gradient.pb.h  gradient.proto
switch/: CMakeLists.txt  Dockerfile  switch_server.cpp
worker/: CMakeLists.txt  Dockerfile  worker_client.cpp
